# frctl

./: .gitignore  ARCHIVE_SUMMARY.md  CLI_COMPLETE.md  COMMIT_NOTES.md  PROMPT_TEMPLATES_COMPLETE.md  QUICK_REFERENCE.md  README.md  SESSION_BRIEF.md  list_gemini_models.py  pyproject.toml  test_gemini_planning.py  test_gemini_simple.py  test_persistence_demo.py
dev-docs/: CONFIGURATION_COMPLETE.md  DIGEST_COMPLETE.md  OPENSPEC_REVIEW.md  PERSISTENCE_COMPLETE.md  README.md  SESSION_BRIEF.md  TESTING_COMPLETE.md  test_gemini_direct.py
docs/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  fractal-v3-architecture.md  roadmap.md
docs/examples/: microservices_example.py  order-events.tsp
docs/guides/: configuration.md  context-tree.md  graph-basics.md  planning-basics.md  prompt-engineering.md  troubleshooting.md
docs/schemas/: graph-json.md  plan-json.md
frctl/: __main__.py  config.py  config_template.toml
frctl/context/: __init__.py  tree.py
frctl/graph/: __init__.py  dag.py  edge.py  node.py
frctl/llm/: __init__.py  provider.py  renderer.py
frctl/planning/: __init__.py  digest.py  engine.py  goal.py  persistence.py
frctl/serialization/: __init__.py
frctl/types/: __init__.py
openspec/: project.md
tests/: __init__.py  test_config.py
tests/cli/: test_plan_commands.py
tests/context/: test_tree.py
tests/graph/: __init__.py  test_dag.py  test_edge.py  test_node.py  test_performance.py  test_serialization.py
tests/llm/: test_mock_provider.py  test_renderer.py
tests/planning/: __init__.py  test_atomicity_detection.py  test_digest.py  (+5 more)
(+16 files in other folders)
